--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,46 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/css/main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <form action="/" method="POST">
-        <input type="text" name="city" placeholder="ENTER A CITY">
-    </form>
-    <button id="what">what</button>
-    <div>
-        <h1 id="weather_name"><%= weather.name %> </h1>
-        <h1 id="weather_name"><%= country_name %> </h1>
-        <h1 id="weather_name"><%= weather.main.temp %> </h1>
-        <h1 id="weather_name">High: <%= weather.main.temp_max %> </h1>
-        <h1 id="weather_name">Low :<%= weather.main.temp_min %> </h1>
-    </div>
-    <div>
-        <img src="<%= country_flag %>"  alt="">
-        <img src=<%= `http://openweathermap.org/img/wn/${weather.weather[0].icon}@2x.png` %> />
-        <h1>Feels Like:<%= weather.main.feels_like %> </h1>
-        <h1>Pressure: <%= weather.main.pressure %> hPa</h1>
-        <h1>Humidity: <%= weather.main.humidity %> %</h1>
-        <h1>Wind Speed: <%= weather.wind.speed %> mph</h1>
-        <h1><%= new Date(weather.dt * 1000).toLocaleTimeString() %> </h1>
-        <h1><%= new Date(weather.sys.sunrise * 1000).toLocaleTimeString() %> </h1>
-        <h1><%= new Date(weather.sys.sunset * 1000).toLocaleTimeString() %></h1>
-    </div>
-    <div class="forecast">
-        <% forecast.list.forEach(temp=> { %>
-                <% const date = new Date(temp.dt * 1000) %>
-                <div class="day-temp">
-                    <p><%= date.toLocaleDateString() %></p>
-                    <p><%= date.toLocaleTimeString('en-US', {hour12: false}) %></p>
-                    <p><%= date.toLocaleTimeString()%></p>
-                    <p><%= temp.main.temp %></p>
-                    <img src=<%= `http://openweathermap.org/img/wn/${temp.weather[0].icon}@2x.png` %> />
-                    <p><%= temp.weather[0].main %></p>
-                    <p><%= temp.weather[0].description %></p>
-                </div>
-        <% }) %>
-    </div>
+    <div class="main-container">
+        <header>
+            <div>
+                c|f
+            </div>
+            <div>
+                <form id="search_form">
+                    <input type="text" name="city" placeholder="ENTER A CITY">
+                </form>
+            </div>
+        </header>
+        <div class="container">
+            <div class="main">
+                <h1 class="city"><%= weather.name %> </h1>
+                <h1 class="country"><%= country_name %> </h1>
+                <h1 class="current-temp"><%= weather.main.temp %> </h1>
+                <h1 class="max-temp">High: <%= weather.main.temp_max %> </h1>
+                <h1 class="min-temp">Low :<%= weather.main.temp_min %> </h1>
+                <h1 class="current-time"><%= new Date(weather.dt * 1000).toLocaleTimeString() %> </h1>
+            </div>
+            <div class="extra-info">
+                <img src="<%= country_flag %>"  alt="">
+                <img src=<%= `http://openweathermap.org/img/wn/${weather.weather[0].icon}@2x.png` %> />
+                <h1>Feels Like:<%= weather.main.feels_like %> </h1>
+                <h1>Pressure: <%= weather.main.pressure %> hPa</h1>
+                <h1>Humidity: <%= weather.main.humidity %> %</h1>
+                <h1>Wind Speed: <%= weather.wind.speed %> mph</h1>
+                <h1><%= new Date(weather.sys.sunrise * 1000).toLocaleTimeString() %> </h1>
+                <h1><%= new Date(weather.sys.sunset * 1000).toLocaleTimeString() %></h1>
+            </div>
+            <div class="forecast">
+                <% forecast.list.forEach(temp=> { %>
+                        <% const date = new Date(temp.dt * 1000) %>
+                        <div class="day-temp">
+                            <p><%= date.toLocaleDateString() %></p>
+                            <p><%= date.toLocaleTimeString('en-US', {hour12: false}) %></p>
+                            <p><%= date.toLocaleTimeString()%></p>
+                            <p><%= temp.main.temp %></p>
+                            <img src=<%= `http://openweathermap.org/img/wn/${temp.weather[0].icon}@2x.png` %> />
+                            <p><%= temp.weather[0].main %></p>
+                            <p><%= temp.weather[0].description %></p>
+                        </div>
+                <% }) %>
+            </div>
+        </div>
+  
 </body>
 <script src="../public/js/index.js"></script>
 
@@ -55,18 +66,25 @@
         box-sizing: border-box;
     }
     body{
-        height:100vh;
+        height: 100vh;
         width: 100vw;
+        max-width: 100%;
     }
 
-    div{
-        width: 100vw;
-    }
     .forecast{
         display: flex;
-        width: 75vw;
         overflow: auto;
+        width: 75%;
         grid-gap: 5px;
+        grid-area: forecast;
+    }
+
+    .main{
+        grid-area: main;
+    }
+
+    .extra-info{
+        grid-area: info;
     }
 
     .day-temp{
@@ -74,5 +92,28 @@
         flex-direction: column;
         border: 5px solid black;
     }
+
+    .container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "main info"
+        "forecast forecast";
+        place-items: center;
+    }
+
+    header{
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem;
+        align-items: center;
+        overflow-x: hidden;
+    }
+
+    header input[type=text]{
+        border-radius: 20px;
+        padding: 0.5em
+    }
+
 </style>
 </html>
