update main temp

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
         </div>
   
 </body>
-<script src="../public/js/index.js"></script>
+<script type="module" src="../public/js/index.js"></script>
 
 <style>
     *,*::before,*::after{
