--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,7 @@
 <body>
     <div class="main-container">
         <header>
-            <div>
-                c|f
-            </div>
+            <input type="checkbox" id="degrees">
             <div>
                 <form id="search_form">
                     <input type="text" name="city" placeholder="ENTER A CITY">
