--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,13 @@
 <body>
     <div class="main-container">
         <header>
-            <input type="checkbox" id="degrees">
+            <label class="degree-toggle" for="degrees">
+                <input type="checkbox" class="degree-input" name="degrees" id="degrees">
+                <div class="degree-slider">
+                    <p class="input-f">F°</p>
+                    <p class="input-c">C°</p>
+                </div>
+            </label>
             <div>
                 <form id="search_form">
                     <input type="text" name="city" placeholder="ENTER A CITY">
@@ -24,19 +30,19 @@
                 <h1 class="city"><%= weather.name %> </h1>
                 <h1 class="country"><%= country_name %> </h1>
                 <h1 class="current-temp" data-temp><%= weather.main.temp %></h1>
-                <h1 class="max-temp">High: <span data-temp><%= weather.main.temp_max %></span> </h1>
-                <h1 class="min-temp">Low : <span data-temp><%= weather.main.temp_min %> </span></h1>
+                <h1 class="max-temp">High: <span data-temp><%= weather.main.temp_max %></span>°</h1>
+                <h1 class="min-temp">Low : <span data-temp><%= weather.main.temp_min %></span>°</h1>
                 <h1 class="current-time"><%= new Date(weather.dt * 1000).toLocaleTimeString() %> </h1>
             </div>
             <div class="extra-info">
                 <img src="<%= country_flag %>"  alt="" id="flag"/>
                 <img src=<%= `http://openweathermap.org/img/wn/${weather.weather[0].icon}@2x.png` %> id="weather-icon"/>
-                <h1 class="feels-like">Feels Like: <span data-temp><%= weather.main.feels_like %></span> </h1>
+                <h1 class="feels-like">Feels Like: <span data-temp><%= weather.main.feels_like %></span>°</h1>
                 <h1 class="pressure" >Pressure: <%= weather.main.pressure %> hPa</h1>
                 <h1 class="humidity">Humidity: <%= weather.main.humidity %> %</h1>
                 <h1 class="wind-speed">Wind Speed: <%= weather.wind.speed %> mph</h1>
-                <h1 class="sunrise"><%= new Date(weather.sys.sunrise * 1000).toLocaleTimeString() %> </h1>
-                <h1 class="sunset"><%= new Date(weather.sys.sunset * 1000).toLocaleTimeString() %></h1>
+                <h1 class="sunrise">Sunrise: <%= new Date(weather.sys.sunrise * 1000).toLocaleTimeString() %> </h1>
+                <h1 class="sunset">Sunset: <%= new Date(weather.sys.sunset * 1000).toLocaleTimeString() %></h1>
             </div>
             <div class="forecast">
                 <% forecast.list.forEach(temp=> { %>
@@ -106,12 +112,78 @@
         padding: 1rem;
         align-items: center;
         overflow-x: hidden;
+        user-select: none;
     }
 
     header input[type=text]{
         border-radius: 20px;
-        padding: 0.5em
+        padding: 0.5rem;
     }
+
+    .degree-toggle{
+        --width: 3.5rem;
+        --height: 2rem;
+        --inner: calc(var(--height)/1.3);
+        --innersides: calc((var(--height) - var(--inner)) / 2);
+        --border-radius: 50px
+    }
+
+    .degree-input{
+        display: none;
+    }
+
+    .degree-slider{
+        position: relative;
+        width: var(--width);
+        height: var(--height);
+        border-radius: var(--border-radius);
+        outline: 2px solid black;
+        background-color: rgba(255, 255, 255, 0)
+    }
+
+    .degree-slider::after{
+        content: "";
+        position: absolute;
+        width: var(--inner);
+        height: var(--inner);
+        left: var(--innersides);
+        top: var(--innersides);
+        border-radius: var(--border-radius);
+        background-color: black;
+        transition: transform 0.2s;
+    }
+
+    .degree-input:checked ~ 
+    .degree-slider::after{
+        transform: translateX(calc(var(--width) - calc(var(--innersides)*2) - var(--inner)));
+    }
+
+
+
+    .input-c,.input-f{
+        position: absolute;
+        font-size: calc(var(--inner) - 0.2rem);
+        top: calc(var(--innersides) - 0.1rem);
+        transition: opacity 0.1s ease-in;
+    }
+
+    .input-f{
+        right: calc(var(--innersides) + 0.1rem);
+    }
+
+    .input-c{
+        opacity: 0;
+        left: calc(var(--innersides) + 0.1rem);
+    }
+
+    .degree-input:checked ~.degree-slider .input-c{
+        opacity: 1;
+    }
+
+    .degree-input:checked ~.degree-slider .input-f{
+        opacity: 0;
+    }
+
 
 </style>
 </html>
