--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,8 @@
             <label class="degree-toggle" for="degrees">
                 <input type="checkbox" class="degree-input" name="degrees" id="degrees">
                 <div class="degree-slider">
-                    <p class="input-f">F°</p>
-                    <p class="input-c">C°</p>
+                    <p class="input-f">°F</p>
+                    <p class="input-c">°C</p>
                 </div>
             </label>
             <div>
@@ -27,22 +27,24 @@
         </header>
         <div class="container">
             <div class="main">
-                <h1 class="city"><%= weather.name %> </h1>
-                <h1 class="country"><%= country_name %> </h1>
-                <h1 class="current-temp" data-temp><%= weather.main.temp %></h1>
-                <h1 class="max-temp">High: <span data-temp><%= weather.main.temp_max %></span>°</h1>
-                <h1 class="min-temp">Low : <span data-temp><%= weather.main.temp_min %></span>°</h1>
-                <h1 class="current-time"><%= new Date(weather.dt * 1000).toLocaleTimeString() %> </h1>
+                <h1 class="city"><%= weather.name %> ,</h1>
+                <h2 class="country"><%= country_name %> </h2>
+                <h1 class="current-temp"><span data-temp><%= weather.main.temp %></span>°</h1>
+                <div class="low-high">
+                    <h3 class="max-temp">High: <span data-temp><%= weather.main.temp_max %></span>°</h3>
+                    <h3 class="min-temp">Low : <span data-temp><%= weather.main.temp_min %></span>°</h3>
+                </div>
+                <h3 class="current-time"><%= new Date(weather.dt * 1000).toLocaleTimeString() %> </h3>
             </div>
             <div class="extra-info">
                 <img src="<%= country_flag %>"  alt="" id="flag"/>
                 <img src=<%= `http://openweathermap.org/img/wn/${weather.weather[0].icon}@2x.png` %> id="weather-icon"/>
-                <h1 class="feels-like">Feels Like: <span data-temp><%= weather.main.feels_like %></span>°</h1>
-                <h1 class="pressure" >Pressure: <%= weather.main.pressure %> hPa</h1>
-                <h1 class="humidity">Humidity: <%= weather.main.humidity %> %</h1>
-                <h1 class="wind-speed">Wind Speed: <%= weather.wind.speed %> mph</h1>
-                <h1 class="sunrise">Sunrise: <%= new Date(weather.sys.sunrise * 1000).toLocaleTimeString() %> </h1>
-                <h1 class="sunset">Sunset: <%= new Date(weather.sys.sunset * 1000).toLocaleTimeString() %></h1>
+                <h3 class="feels-like">Feels Like: <span data-temp><%= weather.main.feels_like %></span>°</h3>
+                <h3 class="pressure" >Pressure: <%= weather.main.pressure %> hPa</h3>
+                <h3 class="humidity">Humidity: <%= weather.main.humidity %> %</h3>
+                <h3 class="wind-speed">Wind Speed: <%= weather.wind.speed %> mph</h3>
+                <h3 class="sunrise">Sunrise: <%= new Date(weather.sys.sunrise * 1000).toLocaleTimeString() %> </h3>
+                <h3 class="sunset">Sunset: <%= new Date(weather.sys.sunset * 1000).toLocaleTimeString() %></h3>
             </div>
             <div class="forecast">
                 <% forecast.list.forEach(temp=> { %>
@@ -73,18 +75,41 @@
         height: 100vh;
         width: 100vw;
         max-width: 100%;
+        background-image: url("../public/imgs/fog_day.jpg");
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color:white;
+        text-shadow: 1px 1px 10px black;
     }
 
     .forecast{
         display: flex;
         overflow: auto;
-        width: 75%;
+        width: 82%;
         grid-gap: 5px;
         grid-area: forecast;
     }
 
+    h1{
+        font-size: 5rem;
+    }
+
+    h2{
+        font-size: 3rem;
+    }
+
     .main{
         grid-area: main;
+    }
+
+    .country{
+        text-align: right;
+    }
+
+    .current-temp, .current-time{
+        text-align: center;
     }
 
     .extra-info{
@@ -104,6 +129,7 @@
         "main info"
         "forecast forecast";
         place-items: center;
+        row-gap: 1.5rem;
     }
 
     header{
@@ -118,6 +144,12 @@
     header input[type=text]{
         border-radius: 20px;
         padding: 0.5rem;
+    }
+
+    .low-high{
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
     }
 
     .degree-toggle{
@@ -138,7 +170,9 @@
         height: var(--height);
         border-radius: var(--border-radius);
         outline: 2px solid black;
-        background-color: rgba(255, 255, 255, 0)
+        background-color: white;
+        color:black;
+        text-shadow: none;
     }
 
     .degree-slider::after{
