--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public//css/index.css">
+    <link rel="stylesheet" href="../public/css/header.css">
     <link rel="stylesheet" href="../public/css/main.css">
     <title>Weather</title>
 </head>
@@ -62,9 +64,8 @@
                         <% const date = new Date(temp.dt * 1000) %>
                         <div class="day-temp">
                             <p><%= date.toLocaleDateString() %></p>
-                            <p><%= date.toLocaleTimeString('en-US', {hour12: false}) %></p>
                             <p><%= date.toLocaleTimeString()%></p>
-                            <p data-temp><%= temp.main.temp %></p>
+                            <p data-temp><%= temp.main.temp %>°</p>
                             <img src=<%= `http://openweathermap.org/img/wn/${temp.weather[0].icon}@2x.png` %> />
                             <p><%= temp.weather[0].main %></p>
                             <p><%= temp.weather[0].description %></p>
@@ -75,198 +76,4 @@
   
 </body>
 <script type="module" src="../public/js/index.js"></script>
-
-<style>
-    *,*::before,*::after{
-        margin: 0;
-        padding:0;
-        box-sizing: border-box;
-    }
-    body{
-        height: 100vh;
-        width: 100vw;
-        max-width: 100%;
-        background-image: url("../public/imgs/fog_day.jpg");
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        color:white;
-        text-shadow: 1px 1px 10px black;
-        text-transform: uppercase;
-    }
-
-    .forecast{
-        display: flex;
-        overflow-x: scroll;
-        width: 82%;
-        gap:1rem;
-        grid-area: forecast;
-    }
-
-    h1{
-        font-size: 5rem;
-    }
-
-    h2{
-        font-size: 3rem;
-    }
-
-    .main{
-        grid-area: main;
-    }
-
-    .country{
-        text-align: right;
-    }
-
-    .current-temp, .current-time{
-        text-align: center;
-    }
-
-    .extra-info{
-        grid-area: info;
-        background-color: rgba(0, 0, 0, 0.5);
-        border-radius: 20px;
-        padding: 1rem;
-    }
-
-    .extra-info-imgs{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .extra-info-data{
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-    }
-
-    .day-temp{
-        display: flex;
-        flex-direction: column;
-        place-items: center;
-        min-width: 25ch;
-        border: 5px solid black;
-        padding: 0.5rem;
-    }
-
-    .container{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-        "main info"
-        "forecast forecast";
-        place-items: center;
-        row-gap: 1.5rem;
-    }
-
-    header{
-        display: flex;
-        justify-content: space-between;
-        padding: 1rem;
-        align-items: center;
-        overflow-x: hidden;
-        user-select: none;
-    }
-
-    header input[type=text]{
-        border-radius: 20px;
-        padding: 0.5rem;
-    }
-
-    .low-high{
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-    }
-
-    .degree-toggle{
-        --width: 3.5rem;
-        --height: 2rem;
-        --inner: calc(var(--height)/1.3);
-        --innersides: calc((var(--height) - var(--inner)) / 2);
-        --border-radius: 50px
-    }
-
-    .degree-input{
-        display: none;
-    }
-
-    .degree-slider{
-        position: relative;
-        width: var(--width);
-        height: var(--height);
-        border-radius: var(--border-radius);
-        outline: 2px solid black;
-        background-color: white;
-        color:black;
-        text-shadow: none;
-    }
-
-    .degree-slider::after{
-        content: "";
-        position: absolute;
-        width: var(--inner);
-        height: var(--inner);
-        left: var(--innersides);
-        top: var(--innersides);
-        border-radius: var(--border-radius);
-        background-color: black;
-        transition: transform 0.2s;
-    }
-
-    .degree-input:checked ~ 
-    .degree-slider::after{
-        transform: translateX(calc(var(--width) - calc(var(--innersides)*2) - var(--inner)));
-    }
-
-
-
-    .input-c,.input-f{
-        position: absolute;
-        font-size: calc(var(--inner) - 0.2rem);
-        top: calc(var(--innersides) - 0.1rem);
-        transition: opacity 0.1s ease-in;
-    }
-
-    .input-f{
-        right: calc(var(--innersides) + 0.1rem);
-    }
-
-    .input-c{
-        opacity: 0;
-        left: calc(var(--innersides) + 0.1rem);
-    }
-
-    .degree-input:checked ~.degree-slider .input-c{
-        opacity: 1;
-    }
-
-    .degree-input:checked ~.degree-slider .input-f{
-        opacity: 0;
-    }
-
-    img{
-        width: 20ch;
-    }
-
-    .search-container{
-        position: relative;
-    }
-
-    .error-msg{
-        display: none;
-        position: absolute;
-        top: 0;
-        right:100%;
-        margin-right: 0.5rem;
-        padding: 0.5rem;
-        background-color: rgba(255, 0, 0, 0.7);
-        border-radius: 20px;
-        text-align: center;
-        width: 20ch;
-    }
-</style>
 </html>
