--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,7 +1,7 @@
 header{
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 1rem 1rem 2rem 1rem;
     align-items: center;
     overflow-x: hidden;
     user-select: none;
@@ -93,12 +93,13 @@ header input[type=text]::placeholder{
 .error-msg{
     display: none;
     position: absolute;
-    top: 0;
-    right:100%;
+    top: calc(100% + 5px);
+    left:50%;
+    transform: translateX(-50%);
     margin-right: 0.5rem;
-    padding: 0.5rem;
+    padding: 0.2rem;
     background-color: rgba(255, 0, 0, 0.7);
     border-radius: var(--radius);
     text-align: center;
-    width: 20ch;
+    width: 15ch;
 }
