--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,7 +13,7 @@ body{
     height: 100vh;
     width: 100vw;
     max-width: 100%;
-    background-image: url("../imgs/fog_day.jpg");
+    background-image: url("../imgs/bg.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
